gateway-tls/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: testistiomtls-credential
      hosts:
        - hello.testistiomtls.dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
  - hello.testistiomtls.dev
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        exact: /demo1
    route:
    - destination:
        host: demo1-svc
        port:
          number: 80
  - match:
    - uri:
        exact: /demo2
    route:
    - destination:
        host: demo2-svc
        port:
          number: 80
